# hexview

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp  memmapped_file.cpp  memmapped_file.hpp  viewer.cpp  viewer.hpp
